--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.1",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^7.1.1",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "7.1.1",
     "@angular/compiler": "^7.1.1",
     "@angular/core": "7.1.1",
+    "@angular/flex-layout": "^7.0.0-beta.22",
     "@angular/forms": "7.1.1",
     "@angular/http": "7.1.1",
     "@angular/material": "7.1.1",
@@ -27,12 +31,10 @@
     "hammerjs": "^2.0.8",
     "rxjs": "6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "^3.2.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "^7.1.1",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -47,7 +49,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "^3.2.2"
+    "tslint": "~5.9.1"
   }
 }
