--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --aot --prod",
+    "start": "node server.js",
+    "start:dev": "ng serve",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "^7.1.1",
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/animations": "^7.1.1",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "7.1.1",
@@ -28,18 +28,22 @@
     "@angular/platform-browser-dynamic": "7.1.1",
     "@angular/router": "7.1.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "rxjs": "6.3.3",
     "tslib": "^1.9.0",
-    "typescript": "^3.2.2",
+    "typescript": "3.1.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "^7.2.0-rc.0",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/language-service": "^7.1.4",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.1.3",
